[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/NME_Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/NME_Ranger.gd" type="Script" id=2]
[ext_resource path="res://Move_Behaviours/Move_RotateOnly.gd" type="Script" id=3]
[ext_resource path="res://Move_Behaviours/Move_FollowTarget.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Attack_Behaviours/Attack_ShootAfterDelay.gd" type="Script" id=5]
[ext_resource path="res://Weapons/Enemies/NME_Weap_Ranger.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.6941, 30.2279 )

[node name="NME_Ranger" instance=ExtResource( 1 )]
script = ExtResource( 2 )
move_state_path = NodePath("Move_FollowTarget")
attack_state_path = NodePath("Attack_ShootAfterDelay")
weapon_path = NodePath("NME_Weap_Ranger")
attack_duration = 4.0

[node name="Polygon2D" parent="." index="0"]
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 3.75719, 5.13752 )
scale = Vector2( 1.44086, 1.13021 )
polygon = PoolVector2Array( -8, -32, -8, 24, 2.41341, 3.16845, 16, -4, 2.61974, -10.7732 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 5.05414, 1.4865 )
shape = SubResource( 1 )

[node name="Health" parent="." index="3"]
max_health = 3

[node name="Light2D" parent="." index="4"]
color = Color( 1.5, 0.12, 0.4, 1 )

[node name="Move_FollowTarget" type="Node" parent="." index="5"]
script = ExtResource( 4 )
start_at_max_speed = true
speed = 0
max_speed = 7500
max_speed_randomisation = 1000
target_distance = 600

[node name="Move_RotateOnly" type="Node" parent="." index="6"]
script = ExtResource( 3 )
max_speed = 0

[node name="Attack_ShootAfterDelay" type="Node" parent="." index="7"]
script = ExtResource( 5 )
trigger_duration = 8.0
delay = 0.1

[node name="NME_Weap_Ranger" parent="." index="8" instance=ExtResource( 6 )]

[node name="AttackTimer" type="Timer" parent="." index="9"]

[connection signal="target_distance_reached" from="Move_FollowTarget" to="." method="_on_Move_FollowTarget_target_distance_reached"]

[editable path="Hitbox"]
